[package]
name = "libp2p-bitswap"
version = "0.17.1"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Implementation of the ipfs bitswap protocol."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ipfs-rust/libp2p-bitswap"

[features]
compat = ["prost", "prost-build"]

[build-dependencies]
prost-build = { version = "0.7.0", optional = true }

[dependencies]
async-trait = "0.1.48"
fnv = "1.0.7"
futures = "0.3.14"
lazy_static = "1.4.0"
libipld = { version = "0.11.0", default-features = false }
libp2p = { version = "0.37.0", default-features = false, features = ["request-response"] }
prometheus = "0.12.0"
prost = { version = "0.7.0", optional = true }
thiserror = "1.0.24"
tracing = "0.1.25"
unsigned-varint = { version = "0.7.0", features = ["futures", "std"] }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
env_logger = "0.8.3"
libipld = { version = "0.11.0", default-features = false, features = ["dag-cbor"] }
libp2p = "0.37.0"
multihash = { version = "0.13.2", default-features = false, features = ["blake3"] }
tracing-subscriber = "0.2.17"
