[package]
name = "libp2p-bitswap"
version = "0.18.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Implementation of the ipfs bitswap protocol."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ipfs-rust/libp2p-bitswap"

[features]
compat = ["prost", "prost-build"]

[build-dependencies]
prost-build = { version = "0.7.0", optional = true }

[dependencies]
async-trait = "0.1.50"
fnv = "1.0.7"
futures = "0.3.15"
lazy_static = "1.4.0"
libipld = { version = "0.12.0", default-features = false }
libp2p = { version = "0.39.1", default-features = false, features = ["request-response"] }
prometheus = "0.12.0"
prost = { version = "0.7.0", optional = true }
thiserror = "1.0.26"
tracing = "0.1.26"
unsigned-varint = { version = "0.7.0", features = ["futures", "std"] }

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
env_logger = "0.8.4"
libipld = { version = "0.12.0", default-features = false, features = ["dag-cbor"] }
libp2p = "0.39.1"
multihash = { version = "0.14.0", default-features = false, features = ["blake3"] }
tracing-subscriber = "0.2.19"
