[package]
name = "libp2p-bitswap"
version = "0.25.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
description = "Implementation of the ipfs bitswap protocol."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ipfs-rust/libp2p-bitswap"

[features]
compat = ["quick-protobuf"]

[build-dependencies]
prost-build = { version = "0.11", optional = true }

[dependencies]
async-trait = "0.1.52"
fnv = "1.0.7"
futures = "0.3.19"
lazy_static = "1.4.0"
libipld = { version = "0.15.0", default-features = false }
libp2p = { version = "0.52", features = ["request-response"] }
prometheus = "0.13.0"
thiserror = "1.0.30"
tracing = "0.1.29"
unsigned-varint = { version = "0.7.1", features = ["futures", "std"] }

quick-protobuf = { version = "0.8.1", optional = true }

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
env_logger = "0.9.0"
libipld = { version = "0.15.0", default-features = false, features = [
    "dag-cbor",
] }
libp2p = { version = "0.52", features = [
    "tcp",
    "noise",
    "yamux",
    "rsa",
    "ed25519",
    "async-std",
] }
multihash = { version = "0.17.0", default-features = false, features = [
    "blake3",
    "sha2",
] }
tracing-subscriber = { version = "0.3.5", features = [
    "env-filter",
    "tracing-log",
] }
